<resources>
    <string name="app_name">Public_transport_app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incorrect_user_or_password">Usuario o contraseña incorrectos</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="title_login">Iniciar Sesión</string>
    <string name="dont_have_an_account">¿Aún no tienes una cuenta?</string>
    <string name="register">Registrate</string>
    <string name="email_or_password_incorrect">Email o contraseña incorrectos</string>
    <string name="loading">Cargando…</string>
    <string name="empty_email_error">Ingresa tu email</string>
    <string name="empty_password_error">Ingresa tu contraseña</string>
    <string name="ya_app_name">Ya</string>
    <string name="subite_app_name">Subite</string>
    <string name="logo_marker_description">Logo marker</string>
    <string name="logo_bus_description">Bus in application logo</string>
    <string name="view_profile">Ver perfil</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="menu_icon">Menú icon</string>
    <string name="close_toolbar_icon">Close</string>
    <string name="my_routes">Mis rutas</string>
    <string name="get_agencies_error">Ocurrió un error al obtener las agencias del usuario.</string>
    <string name="new_route">Nueva ruta</string>
    <string name="create_route_title">Crear Ruta</string>
    <string name="select_starting_point">Seleccionar punto de partida</string>
    <string name="select_end_point">Seleccionar punto de llegada</string>
    <string name="select_location_title">Selecciona una ubicación</string>
    <string name="select_location_instructions">Presiona una ubicación en el mapa para seleccionarla.</string>
    <string name="confirm_location_button">Confirmar ubicación</string>
    <string name="select_location_before_error">Por favor selecciona una ubicación antes de continuar</string>
    <string name="location_selected">Ubicación seleccionada</string>
    <string name="route_name">Nombre de la ruta</string>
    <string name="select_units_images">Seleccionar imágenes de las unidades</string>
    <string name="delete">Eliminar</string>
    <string name="selected_image">Imagen seleccionada</string>
    <string name="attention_schedule">Horarios de atención</string>
    <string name="monday">Lunes</string>
    <string name="time_template">00:00</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="empty_hour">00:00</string>
    <string name="select_agency">Seleccionar agencia</string>
    <string name="monday_workday_switch_description">Switch que indica si el lunes está habilitado el servicio.</string>
    <string name="tuesday_workday_switch_description">Switch que indica si el martes está habilitado el servicio.</string>
    <string name="wednesday_workday_switch_description">Switch que indica si el miércoles está habilitado el servicio.</string>
    <string name="thursday_workday_switch_description">Switch que indica si el jueves está habilitado el servicio.</string>
    <string name="friday_workday_switch_description">Switch que indica si el viernes está habilitado el servicio.</string>
    <string name="saturday_workday_switch_description">Switch que indica si el sábado está habilitado el servicio.</string>
    <string name="sunday_workday_switch_description">Switch que indica si el domingo está habilitado el servicio.</string>
    <string name="create_new_route">Crear nueva ruta</string>
    <string name="add_units_title">Añadir placas de unidades</string>
    <string name="add_unit_id">Placa de la unidad (bus)</string>
    <string name="add">Añadir</string>
    <string name="error_has_occurred">Ocurió un error</string>
    <string name="general_error">Ocurió un error.</string>
    <string name="banner_bus_description">Banner con imagen de bus</string>
    <string name="start_run">Iniciar viaje</string>
    <string name="pause_run">Pausar viaje</string>
    <string name="resume_run">Reanudar viaje</string>
    <string name="finish_run">Terminar Viaje</string>
    <string name="location_permission_rational_start_run_title">Activar el permiso de ubicación precisa</string>
    <string name="location_permission_rational_start_run_description">Activa el permiso de ubicación precisa para iniciar un viaje. Necesitamos acceder a tu ubicación mientras conduces para registrar tus recorridos. No guardamos datos personales ni del dispositivo, y protegemos quién puede ver la ubicación de esta unidad.</string>
    <string name="back_location_permission_rational_start_run_title">Ayúdanos a evitar que se pierdan datos</string>
    <string name="back_location_permission_rational_start_run_description">Para iniciar un viaje, activa el permiso de ubicación en todo momento. Compartir tu ubicación en segundo plano nos ayuda a evitar interrupciones si sales o cierras la app accidentalmente. Siempre recibirás una notificación mientras estés compartiendo tu ubicación.</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="enable_permissions">Habilitar permisos</string>
    <string name="full_location_permission_rational_start_run_title">Activa el permiso de ubicación para registrar tus recorridos</string>
    <string name="full_location_permission_rational_start_run_description">Necesitamos que proporciones el permiso de ubicación precisa en todo momento. Se utilizará exclusivamente mientras te encuentre en un viaje activo, para registrar tus recorridos correctamente, incluso si cierras la app. No almacenamos datos personales y protegemos quién puede ver esta información.</string>
    <string name="get_location_data_error">Ocurrió un error al obtener datos de sensor de ubicación al iniciar viaje.</string>
    <string name="tracking_service_title">Viaje en curso</string>
    <string name="tracking_service_description">Seguimiento de ruta activo</string>
    <string name="track_my_location">Seguir mi ubicación</string>
    <string name="get_nearby_runs_error_toast">Ocurrió un error al obtener los buses cercanos</string>
    <string name="banner_desc_no_results">Banner de pantalla de sin resultados</string>
    <string name="no_results_found">No se encontraron resultados</string>
    <string name="attention_schedule_title">Horario de atención</string>
    <string name="no_service">No hay servicio</string>
    <string name="open_schedule">Abre: %s</string>
    <string name="close_schedule">Cierra: %s</string>
    <string name="give_permissions">Dar permisos</string>
    <string name="need_location_to_show_map">Necesitamos tu ubicación para mostrar el mapa</string>
    <string name="remove">Remover</string>
    <string name="stop_location_content_desc">Ubicación de la parada</string>
    <string name="stops">Paradas</string>
    <string name="add_stop">Añadir parada</string>
    <string name="confirm_changes">Confirmar cambios</string>
    <string name="updated_succesfully">Actualización exitosa</string>
    <string name="route_stops_update_success_message">Las paradas de la ruta han sido actualizadas correctamente.</string>
    <string name="success_icon_conten_desc">Icono de éxito</string>
    <string name="ok">OK</string>
    <string name="select_stop">Seleccionar parada</string>
    <string name="select_stop_instruction">Selecciona una nueva parada para tu ruta</string>
    <string name="stop_name">Nombre de la parada</string>
    <string name="create_new_stop">Crear nueva parada</string>
    <string name="select_stop_location">Seleccionar ubicación de la parada</string>
    <string name="create_stop">Crear parada</string>
    <string name="error_createStop_name_required">El nombre de la parada es obligatorio.</string>
    <string name="error_createStop_location_required">La ubicación de la parada es obligatoria.</string>
    <string name="error_createStop_agencyRequired">El ID de la agencia no puede estar vacío.</string>
    <string name="alert_title_stop_created_succesfully">Parada creada con éxito</string>
    <string name="alert_content_stop_created_succesfully">La parada %1$s ha sido creada con éxito</string>
    <string name="select_stop_content_desc">Seleccionar parada ya existente</string>
    <string name="select">Seleccionar</string>
    <string name="admin_stops">Administrar paradas</string>
    <string name="distance_in_metters">%1$dm</string>
    <string name="nearby_routes">Rutas cercanas</string>
    <string name="schedule_general_error">Ingresa los horarios de apertura y cierre para los días habilitados.</string>
    <string name="logging_banner_content_desc">Banner de inicio de sesión</string>

</resources>