<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sideNav_item_routes"
            android:icon="@drawable/ic_routes"
            android:title="@string/my_routes"
            />
        <item
            android:id="@+id/sideNav_item_stops"
            android:icon="@drawable/ic_bus_stop"
            android:title="@string/admin_stops"
            />
        <item
            android:id="@+id/sideNav_item_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

        <item
            android:id="@+id/sideNav_item_login"
            android:icon="@drawable/ic_login"
            android:title="@string/title_login" />

    </group>

</menu>