<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.routeView.RouteViewFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView_routesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/fragment_vertical_margin"
            android:paddingHorizontal="@dimen/fragment_horizontal_margin"
            >

            <TextView
                android:id="@+id/textview_routeViewFragment_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Línea 12 transmetro"
                android:textSize="@dimen/h2_text_size"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/title_bottom_margin"
                />

            <ImageView
                android:id="@+id/imageView_banner"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:contentDescription="@string/banner_bus_description"
                android:scaleType="fitCenter"
                android:src="@drawable/banner_bus"
                android:layout_marginBottom="35dp"
                />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_routeViewFragment_permissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_permissions"
                android:textStyle="bold"
                android:textSize="@dimen/button_text_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:backgroundTint="#555879"
                android:paddingVertical="@dimen/button_vertical_padding"
                app:cornerRadius="@dimen/button_radius"
                android:visibility="gone"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_routeViewFragment_startRun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_run"
                android:textStyle="bold"
                android:textSize="@dimen/button_text_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:paddingVertical="@dimen/button_vertical_padding"
                app:cornerRadius="@dimen/button_radius"
                app:icon="@drawable/ic_play"
                app:iconTint="@android:color/white"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/button_icon_padding"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_routeViewFragment_pauseRun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pause_run"
                android:textStyle="bold"
                android:textSize="@dimen/button_text_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:backgroundTint="#555879"
                android:paddingVertical="@dimen/button_vertical_padding"
                app:cornerRadius="@dimen/button_radius"
                app:icon="@drawable/ic_pause"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/button_icon_padding"
                app:iconTint="@android:color/white"
                android:visibility="gone"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_routeViewFragment_resumeRun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resume_run"
                android:textStyle="bold"
                android:textSize="@dimen/button_text_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:backgroundTint="#555879"
                android:paddingVertical="@dimen/button_vertical_padding"
                app:cornerRadius="@dimen/button_radius"
                app:icon="@drawable/ic_play"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/button_icon_padding"
                app:iconTint="@android:color/white"
                android:visibility="gone"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_routeViewFragment_finishRun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/finish_run"
                android:textStyle="bold"
                android:textSize="@dimen/button_text_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:backgroundTint="#8A0000"
                android:paddingVertical="@dimen/button_vertical_padding"
                app:cornerRadius="@dimen/button_radius"
                app:icon="@drawable/ic_stop"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/button_icon_padding"
                app:iconTint="@android:color/white"
                android:visibility="gone"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_routesList_updateStops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/floating_action_button_margin"
        android:contentDescription="@string/new_route"
        app:srcCompat="@drawable/ic_bus_stop"
        app:maxImageSize="35dp"
        android:backgroundTint="@color/secondary_dark_color"
        app:tint="@color/black"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
