<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.createStopView.CreateStopFragment"
    android:paddingVertical="@dimen/fragment_vertical_margin"
    android:paddingHorizontal="@dimen/fragment_horizontal_margin"
    >

    <ScrollView
        android:id="@+id/scrollview_createStop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_createStop_submit"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textview_createStop_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_stop"
            android:textSize="@dimen/h2_text_size"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_createStop_agencies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_bottom_margin"
            android:hint="@string/select_agency"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintTop_toBottomOf="@id/textview_createStop_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconTint="@color/dark_gray"
            app:endIconMode="dropdown_menu"
            android:importantForAccessibility="yes"
            android:labelFor="@id/autoCompleteView_createStop_agencies">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteView_createStop_agencies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/plain_text_size"
                android:inputType="none"
                android:clickable="true"
                android:importantForAccessibility="yes"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_createStop_stopName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_bottom_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/stop_name"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_createStop_agencies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/plain_text_size"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_createStop_selectLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:text="@string/select_stop_location"
            android:textStyle="bold"
            android:textSize="@dimen/plain_text_size"
            app:icon="@drawable/ic_marker"
            app:tint="@color/main_color"
            app:iconSize="@dimen/button_icon_size"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeWidth="@dimen/input_stroke_width"
            app:strokeColor="@color/main_color"
            app:cornerRadius="@dimen/input_corner_radius"
            app:layout_constraintTop_toBottomOf="@id/textInput_createStop_stopName"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView_createStop_location"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/button_createStop_selectLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:liteMode="true"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_createStop_submit"
        android:text="@string/create_new_stop"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:cornerRadius="@dimen/button_radius"
        android:paddingVertical="@dimen/button_vertical_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollview_createStop"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>