<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.selectLocationMap.SelectLocationMapFragment">

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/fragmentContainer_selectLocationFragmentDialog_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:background="@color/light_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout_selectLocationFragment_container"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_selectLocationFragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragmentContainer_selectLocationFragmentDialog_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="30dp"
        android:paddingHorizontal="@dimen/fragment_horizontal_margin"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/textview_selectLocationMapFragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_location_title"
            android:textColor="@color/black"
            android:textSize="@dimen/h4_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/textview_selectLocationMapFragment_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_location_instructions"
            app:layout_constraintTop_toBottomOf="@id/textview_selectLocationMapFragment_title"
            app:layout_constraintStart_toStartOf="@id/textview_selectLocationMapFragment_title"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_selectLocationMapFragment_confirm"
            android:text="@string/confirm_location_button"
            app:layout_constraintTop_toBottomOf="@id/textview_selectLocationMapFragment_instructions"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:cornerRadius="@dimen/button_radius"
            android:paddingVertical="@dimen/button_vertical_padding"
            android:layout_marginTop="20dp"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
