<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.homePage.HomePageFragment">

    <!-- Layout principal con mapa -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_homePage_mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Fragment del mapa -->
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_gray" />

        <!-- Botón de menú -->
        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/imageButton_homePage_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/menu_icon"
                android:src="@drawable/ic_menu"
                android:scaleType="centerInside"
                android:padding="8dp"
                app:tint="@color/black" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Overlay de permisos -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_homePage_locationPermissionOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
        android:visibility="gone">

        <TextView
            android:id="@+id/permissionMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_location_to_show_map"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_homePage_requestPermissionButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/button_homePage_requestPermissionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/give_permissions"
            app:layout_constraintTop_toBottomOf="@id/permissionMessage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Bottom Sheet deslizable -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_homePage_bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_halfExpandedRatio="0.4"
        app:behavior_fitToContents="false"
        app:behavior_peekHeight="80dp"
        android:elevation="50dp"
        app:behavior_expandedOffset="100dp"
        >

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainer_homePage_bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="androidx.navigation.fragment.NavHostFragment"
            app:navGraph="@navigation/bottom_sheet_nav_graph"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- FAB anclado al Bottom Sheet -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_homePage_centerLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/track_my_location"
        android:src="@drawable/ic_my_location"
        android:backgroundTint="@color/white"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="100dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
